<resources>
    <string name="app_name">choose2help4175</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="btn_link_to_signup">Don\'t have an account, Signup !!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_donations">Quick Donation</string>
    <string name="menu_offerservice">Offer a service</string>
    <string name="menu_donationhistory">Donation History</string>

    <string name="nav_header_user_name">User Name</string>
    <string name="nav_header_user_email">user@user.com</string>


    <string name="history_title">Donation History</string>
    <string name="history_txtView">Sample Donation</string>

    <!--    Donation links and details-->
    <string name="donationTitles">Organization List</string>
    <string name="defaultUserName">Johanna, Han</string>
    <string name="donationDetailTitle">Pay-it-Forward</string>
    <string name="txtDonationDetail">What is is? Pay for a service and it will be given for free to someone in need!</string>
    <string name="organizationName">Downtown Eastside Women’s Centre</string>
    <string name="organizationDescription">DEWC provides a safe, non-judgmental environment for all women who live or work on the Downtown East Side. It supports the environment with diet, counselling, advocacy and various programs.</string>
    <string name="organizationAddress">302 Columbia St Vancouver BC, Canada</string>
    <string name="organizationEmail">admin@dewc.ca</string>
    <string name="organizationPhone">604-681-8480</string>
    <string name="btnDonation">Donation</string>
    <string name="btnVolunteer">Volunteer</string>
    <string name="btnBringList">Bring the List</string>

    <string name="freeServiceTitle">Free Service List</string>
    <string name="btnRegisterService">Register Service</string>
    <string name="RegisterFreeServiceList">Register Free Service</string>
    <string name="exTitle">Free Coffee</string>
    <string name="exType">Food</string>
    <string name="exTypeFood">Food</string>
    <string name="exTypeAmenities">Amenities</string>
    <string name="exTypeCultural">Cultural</string>
    <string name="exTypeEducational">Educational</string>
    <string name="exDate">YYYY-MM-DD</string>
    <string name="exTime">e.g. 2 PM</string>
    <string name="bnSaveService">Save</string>
    <string name="exFreeCoffeeName">The Dugout</string>
    <string name="exAddress">59 Powell St, Vancouver, BC V6A 1E9</string>
    <string name="exFreeServiceDay">2022-12-24</string>
    <string name="exFreeServiceTime">2 PM</string>
    <string name="exFreeServiceDescription">Delicious coffee makes for a beautiful day. Enjoy the cold winter with warm coffee.</string>

    <string name="btnMakeAppointment">Make Appointment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_charity_map">CharityMap</string>
    <string name="menu_map">Map</string>


</resources>

