<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_donations"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_donations" />
        <item
            android:id="@+id/nav_offerservice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_offerservice" />
        <item
            android:id="@+id/nav_donationhistory"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_donationhistory" />
    </group>
</menu>