<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_donations"
        android:label="@string/menu_donations"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_offerservice"
        android:label="@string/menu_offerservice"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_donationhistory"
        android:label="@string/menu_donationhistory"
        tools:layout="@layout/fragment_gallery" />
</navigation>