<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonationDetailsActivity">

    <ImageView
        android:id="@+id/imgOZ"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dewc" />

    <TextView
        android:id="@+id/txtTitleOZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/organizationName"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgOZ" />


    <TextView
        android:id="@+id/txtDescriptionOZ"
        android:layout_width="380dp"
        android:layout_height="82dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/organizationDescription"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleOZ" />

    <TextView
        android:id="@+id/txtAddressOZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/organizationAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescriptionOZ" />


    <TextView
        android:id="@+id/txtEmailOZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/organizationEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddressOZ" />

    <TextView
        android:id="@+id/txtPhoneOZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/organizationPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddressOZ" />

    <Button
        android:id="@+id/btnDonationOZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_red_light"
        android:backgroundTint="@android:color/holo_red_light"
        android:foregroundTint="@android:color/holo_red_light"
        android:text="@string/btnDonation"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnVolunteerOZ"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailOZ" />

    <Button
        android:id="@+id/btnVolunteerOZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/holo_red_light"
        android:backgroundTint="@android:color/holo_red_light"
        android:foregroundTint="@android:color/holo_red_light"
        android:text="@string/btnVolunteer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailOZ"
        tools:textColor="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>